동작 원리 설명

--- a/JAVA/동작 원리.md
+++ b/JAVA/동작 원리.md
@@ -7,10 +7,10 @@
 
 자바의 특징
 1. 운영체제에 독립적(JVM 때문에)
-	* [JVM 자세히 알아보기](https://github.com/kleg26315/TIL/blob/master/1%EC%9D%BC%EC%B0%A8/Garbage%20Collection.md)
+	* [JVM 자세히 알아보기](https://github.com/kleg26315/TIL/blob/master/JAVA/Garbage%20Collection.md)
 2. 사용하기 쉬운 언어(객체 지향 언어)
 3. 자동 메모리 관리(Garbage Collection)
-	* [Garbage Collection 자세히 알아보기](https://github.com/kleg26315/TIL/blob/master/1%EC%9D%BC%EC%B0%A8/Garbage%20Collection.md)
+	* [Garbage Collection 자세히 알아보기](https://github.com/kleg26315/TIL/blob/master/JAVA/Garbage%20Collection.md)
 4. 네트워크와 분산환경 지원
 5. 멀티쓰래드 지원
 
