Update and rename 단일행함수.md to 단일행함수&그룹함수.md

--- a/SQL/단일행함수&그룹함수.md
+++ b/SQL/단일행함수&그룹함수.md
@@ -269,3 +269,25 @@ CASE WHEN 조건식 THEN 결과 값
 END
 ```
 * 비교하고자 하는 값 또는 컬럼이 조건식과 같으면 결과 값 반환(조건은 범위 가능)
+
+# 그룹 함수 (GROUP FUNCTION)
+
+N개의 값을 넣어서 한 개의 결과를 리턴합니다.
+
+### SUM
+* SUM(숫자가 기록된 컬럼)
+* 합계 리턴
+
+### AVG
+* AVG(숫자가 기록된 컬럼)
+* 평균 리턴
+* NULL값을 가진 행은 평균 계산에서 제외 되어 계산
+
+### MIN / MAX
+* 최소 / 최대
+
+### COUNT
+* COUNT(*) : NULL을 포함한 전체 행 개수 리턴
+* COUNT(컬럼명) : NULL을 제외한 전체 행 개수 리턴
+* COUNT(DISTINCT 컬럼명) : 중복을 제거한 행 개수 리턴
+
